# poetry-generate-plugin

./: README.md  pyproject.toml
poetry_generate_plugin/: plugin.py
poetry_generate_plugin/commands/: generate.py
